# pegaso

./: .gitignore  DEPLOYMENT.md  README.md  deploy-multi-asset.sh  vault_addresses.env
FE/: MULTI_ASSET_GUIDE.md  index.html  package.json  vite.config.ts
FE/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
FE/src/components/: AssetSelector.tsx  ConnectButton.tsx  DepositForm.tsx  SwapModal.tsx  VaultInterface.tsx
FE/src/config/: vaults.ts
FE/src/context/: WalletContext.tsx
FE/src/hooks/: useFreighterConnection.ts
FE/src/pages/: Dashboard.tsx  Landing.tsx  TreasuryStrategy.tsx
FE/src/utils/: aquariusSwap.ts  format.ts  stellar.ts  vaultContract.ts  walletKit.ts
Vault/: Cargo.toml
Vault/contracts/pegaso-vault/: Cargo.toml
Vault/contracts/pegaso-vault/src/: lib.rs  test.rs
